After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692556 - "Desktop search" app starts when suspending
"Desktop search" app starts when suspending
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-01-25 20:16 UTC by Mantas Mikulėnas (grawity)
Modified: 2013-01-26 00:17 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Mantas Mikulėnas (grawity) 2013-01-25 20:16:12 UTC
Immediately before suspending, the "Desktop search" application (tracker-needle) starts, for no apparent reason. 

If I set org.gnome.settings-daemon.plugins.media-keys.search to a different key than the default ('XF86Search'), this behavior disappears.

`git bisect` gives me:

commit b0d101d878482914c1ba652abf413b362dd4eaa8:
Author: Bastien Nocera <hadess@hadess.net>
Date:   Sat Jan 19 01:58:36 2013 +0100

    power: Reset IDLETIME on resume

It seems that this idle-reset hack causes the media-keys plugin to think that XF86Search was pressed and launch the search tool.
Comment 1 Bastien Nocera 2013-01-25 23:15:06 UTC
Andre, you don't need to CC: me on the bugs, I already receive the bugmail.

commit 3642332a8b337b0deec6bf5eab48358ab2e373e5
Author: Bastien Nocera <hadess@hadess.net>
Date:   Sat Jan 26 00:13:38 2013 +0100

    power: tests: Correct use of XTestFakeKeyEvent()
    
    It expects a keycode, not a keysym.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=692556
Comment 2 Mantas Mikulėnas (grawity) 2013-01-25 23:42:01 UTC
I just tested the fix, and now after resume programs think that Alt_L is pressed even though it isn't. The fix fakes a press to Alt_L but releases Alt_R...
Comment 3 Bastien Nocera 2013-01-26 00:17:02 UTC
Thinko/unfinished train of thought (first_keycode was never used...).

commit 11078cfbea800b1a92e0a7ed80044956e70169cd
Author: Bastien Nocera <hadess@hadess.net>
Date:   Sat Jan 26 01:06:52 2013 +0100

    power: Fix incomplete fix for bug 692556