power: tests: Correct use of XTestFakeKeyEvent()

It expects a keycode, not a keysym.

https://bugzilla.gnome.org/show_bug.cgi?id=692556